# obsidianRAGsody

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: env_setup.py  input_analyzer.py  main.py  orchestrator.py  request_interpreter.py
src/generate_md/: generate_md_orchestrator.py
src/generate_md/core/: ai_caller.py  optimal_file_organizer.py  page_generator.py  website_scraper.py
src/rag_vault/: build_rag.py
src/vault_rag/: query_vault_rag.py  vault_rag.py
