[project]
name = "obsidian-ragsody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index-core>=0.14.4",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.6.4",
    "llama-index-readers-file>=0.5.4",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
]
